--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -59,9 +59,9 @@
             siteUrl="http://download.springsource.com/release/TOOLS/third-party/m2e-kepler/">
          <iu id="org.eclipse.m2e.feature" />
          <iu id="org.eclipse.m2e.logback.feature" />
+         <iu id="org.eclipse.m2e.wtp.feature" />
          <iu id="org.sonatype.m2e.mavenarchiver.feature" />
          <iu id="org.sonatype.m2e.buildhelper.feature" />
-         <iu id="org.maven.ide.eclipse.wtp.feature" />
          <iu id="org.maven.ide.eclipse.ajdt.feature" />
          <icon
                image32="images/m2eclipse.gif"></icon>
@@ -87,9 +87,9 @@
             siteUrl="http://download.springsource.com/release/TOOLS/third-party/m2e-juno/">
          <iu id="org.eclipse.m2e.feature" />
          <iu id="org.eclipse.m2e.logback.feature" />
+         <iu id="org.eclipse.m2e.wtp.feature" />
          <iu id="org.sonatype.m2e.mavenarchiver.feature" />
          <iu id="org.sonatype.m2e.buildhelper.feature" />
-         <iu id="org.maven.ide.eclipse.wtp.feature" />
          <iu id="org.maven.ide.eclipse.ajdt.feature" />
          <icon
                image32="images/m2eclipse.gif"></icon>
