--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -236,7 +236,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -255,9 +255,7 @@
             name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-			siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e3.7/">
-			<!-- Revert to this update site for final build -->
-			<!-- siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7"> -->
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
          <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -297,7 +295,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -316,9 +314,7 @@
             name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-			siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.2/">
-			<!-- Revert to this update site for final build -->
-			<!-- siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2"> -->
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
          <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -358,7 +354,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -377,9 +373,7 @@
             name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-			siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.2/">
-			<!-- Revert to this update site for final build -->
-			<!-- siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2"> -->
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
          <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -419,7 +413,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -438,9 +432,7 @@
             name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-			siteUrl="http://dist.springsource.org/milestone/GRECLIPSE/e4.3/">
-			<!-- Revert to this update site for final build -->
-			<!-- siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3"> -->
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
          <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -459,7 +451,7 @@
             name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-			siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
          <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -501,7 +493,7 @@
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -521,7 +513,7 @@
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -541,7 +533,7 @@
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -563,7 +555,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -583,7 +575,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -603,7 +595,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -623,7 +615,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -645,17 +637,15 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.osgi.feature" />
          <iu id="org.springframework.ide.eclipse.security.feature" />
          <iu id="org.springframework.ide.eclipse.webflow.feature" />
          <iu id="org.springframework.ide.eclipse.batch.feature" />
          <iu id="org.springframework.ide.eclipse.integration.feature" />
          <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.roo.feature" />
          <iu id="org.springframework.ide.eclipse.mylyn.feature" />
          <iu id="org.springframework.ide.eclipse.maven.feature" />
          <iu id="org.springframework.ide.eclipse.data.feature" />
@@ -677,17 +667,15 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.osgi.feature" />
          <iu id="org.springframework.ide.eclipse.security.feature" />
          <iu id="org.springframework.ide.eclipse.webflow.feature" />
          <iu id="org.springframework.ide.eclipse.batch.feature" />
          <iu id="org.springframework.ide.eclipse.integration.feature" />
          <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.roo.feature" />
          <iu id="org.springframework.ide.eclipse.mylyn.feature" />
          <iu id="org.springframework.ide.eclipse.maven.feature" />
          <iu id="org.springframework.ide.eclipse.data.feature" />
@@ -709,17 +697,15 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.osgi.feature" />
          <iu id="org.springframework.ide.eclipse.security.feature" />
          <iu id="org.springframework.ide.eclipse.webflow.feature" />
          <iu id="org.springframework.ide.eclipse.batch.feature" />
          <iu id="org.springframework.ide.eclipse.integration.feature" />
          <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.roo.feature" />
          <iu id="org.springframework.ide.eclipse.mylyn.feature" />
          <iu id="org.springframework.ide.eclipse.maven.feature" />
          <iu id="org.springframework.ide.eclipse.data.feature" />
@@ -741,17 +727,15 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.osgi.feature" />
          <iu id="org.springframework.ide.eclipse.security.feature" />
          <iu id="org.springframework.ide.eclipse.webflow.feature" />
          <iu id="org.springframework.ide.eclipse.batch.feature" />
          <iu id="org.springframework.ide.eclipse.integration.feature" />
          <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.roo.feature" />
          <iu id="org.springframework.ide.eclipse.mylyn.feature" />
          <iu id="org.springframework.ide.eclipse.maven.feature" />
          <iu id="org.springframework.ide.eclipse.data.feature" />
@@ -763,6 +747,85 @@
          </overview>
       </connectorDescriptor>
       <!-- END Spring-IDE -->
+
+      <!-- BEGIN Spring-IDE Roo Extension-->
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Spring IDE Extension to support Spring Roo development from within the IDE"
+            id="org.springframework.ide.eclipse.roo.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE - Roo Extension"
+            provider="SpringSource, a division of VMware, Inc."
+            platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
+         <icon
+               image32="images/springsource_32.png">
+         </icon>
+         <overview
+               summary="Spring IDE Extension to support Spring Roo development from within the IDE">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Spring IDE Extension to support Spring Roo development from within the IDE"
+            id="org.springframework.ide.eclipse.roo.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE - Roo Extension"
+            provider="SpringSource, a division of VMware, Inc."
+            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+         <icon
+               image32="images/springsource_32.png">
+         </icon>
+         <overview
+               summary="Spring IDE Extension to support Spring Roo development from within the IDE">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Spring IDE Extension to support Spring Roo development from within the IDE"
+            id="org.springframework.ide.eclipse.roo.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE - Roo Extension"
+            provider="SpringSource, a division of VMware, Inc."
+            platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+         <icon
+               image32="images/springsource_32.png">
+         </icon>
+         <overview
+               summary="Spring IDE Extension to support Spring Roo development from within the IDE">
+         </overview>
+      </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="Spring IDE Extension to support Spring Roo development from within the IDE"
+            id="org.springframework.ide.eclipse.roo.feature"
+            kind="task"
+            groupId="certified"
+            license="Free, EPL"
+            name="Spring IDE - Roo Extension"
+            provider="SpringSource, a division of VMware, Inc."
+            platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+         <icon
+               image32="images/springsource_32.png">
+         </icon>
+         <overview
+               summary="Spring IDE Extension to support Spring Roo development from within the IDE">
+         </overview>
+      </connectorDescriptor>
+
+      <!-- END Spring-IDE Roo Extension-->
 
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.frameworks"
@@ -1026,7 +1089,9 @@
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver.insight" />
          <icon
                image32="images/springsource_32.png">
          </icon>
@@ -1045,7 +1110,9 @@
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver.insight" />
          <icon
                image32="images/springsource_32.png">
          </icon>
@@ -1064,7 +1131,9 @@
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver.insight" />
          <icon
                image32="images/springsource_32.png">
          </icon>
@@ -1083,7 +1152,9 @@
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
+         <iu id="com.vmware.vfabric.ide.eclipse.tcserver.insight" />
          <icon
                image32="images/springsource_32.png">
          </icon>
