--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -236,7 +236,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -255,7 +255,7 @@
             name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
          <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -295,7 +295,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -314,7 +314,7 @@
             name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
          <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -354,7 +354,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -373,7 +373,7 @@
             name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
          <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -413,7 +413,7 @@
             name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -432,7 +432,7 @@
             name="Groovy 2.1 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
          <iu id="org.codehaus.groovy21.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -451,7 +451,7 @@
             name="Groovy-Eclipse Configurator for M2Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-			siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+			siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
          <iu id="org.codehaus.groovy.m2eclipse" />
          <icon
                image32="images/groovy_32.png"></icon>
@@ -493,7 +493,7 @@
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -513,7 +513,7 @@
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -533,7 +533,7 @@
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -555,7 +555,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -575,7 +575,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -595,7 +595,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -615,7 +615,7 @@
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -637,7 +637,7 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
@@ -667,7 +667,7 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
@@ -697,7 +697,7 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
@@ -727,7 +727,7 @@
             name="Spring IDE"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
          <iu id="org.springframework.ide.eclipse.feature" />
          <iu id="org.springframework.ide.eclipse.aop.feature" />
          <iu id="org.springframework.ide.eclipse.ajdt.feature" />
@@ -759,7 +759,7 @@
             name="Spring IDE - Roo Extension"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
          <icon
                image32="images/springsource_32.png">
          </icon>
@@ -778,7 +778,7 @@
             name="Spring IDE - Roo Extension"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
          <icon
                image32="images/springsource_32.png">
          </icon>
@@ -797,7 +797,7 @@
             name="Spring IDE - Roo Extension"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
          <icon
                image32="images/springsource_32.png">
          </icon>
@@ -816,7 +816,7 @@
             name="Spring IDE - Roo Extension"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
          <icon
                image32="images/springsource_32.png">
          </icon>
@@ -1089,7 +1089,7 @@
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.7">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.7">
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver.insight" />
          <icon
@@ -1110,7 +1110,7 @@
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e3.8">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e3.8">
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver.insight" />
          <icon
@@ -1131,7 +1131,7 @@
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.2.0)(platform.version&lt;=4.2.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.2">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.2">
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver.insight" />
          <icon
@@ -1152,7 +1152,7 @@
             name="VMware vFabric tc Server Integration for Eclipse"
             provider="VMware, Inc."
             platformFilter="(&amp;(platform.version&gt;=4.3.0)(platform.version&lt;=4.3.9))"
-            siteUrl="http://download.springsource.com/milestone/TOOLS/update/3.3.0.M1/e4.3">
+            siteUrl="http://download.springsource.com/milestone/TOOLS/update/e4.3">
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver" />
          <iu id="com.vmware.vfabric.ide.eclipse.tcserver.insight" />
          <icon
